# work-with-graphs

./: CMakeLists.txt  FillingInTheGraphData.cpp  FillingInTheGraphData.h  Graph.h  InputOfRepresentations.cpp  InputOfRepresentations.h  OutputOfRepresentations.cpp  OutputOfRepresentations.h  README.md  README.txt  Searches.cpp  Searches.h  input.txt  main.cpp
